# controlStation

./: testing.launch
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/interpreter/: i2c.h
devel/lib/mr_tools/: joystick_teleoperator
devel/lib/pkgconfig/: async_web_server_cpp.pc  interpreter.pc  mr_rqt.pc  mr_tools.pc  rov_control_station.pc  rov_teleop.pc  teleop_twist_keyboard.pc  video_stream_opencv.pc  web_video_server.pc
devel/lib/web_video_server/: web_video_server
devel/share/async_web_server_cpp/cmake/: async_web_server_cppConfig.cmake
devel/share/interpreter/cmake/: interpreter-msg-extras.cmake  interpreter-msg-paths.cmake  interpreterConfig.cmake
devel/share/mr_rqt/cmake/: mr_rqtConfig.cmake
devel/share/mr_tools/cmake/: mr_toolsConfig.cmake
devel/share/rov_control_station/cmake/: rov_control_stationConfig.cmake
devel/share/rov_teleop/cmake/: rov_teleopConfig.cmake
install/: .rosinstall  local_setup.sh
install/lib/pkgconfig/: async_web_server_cpp.pc  rov_control_station.pc  video_stream_opencv.pc
install/lib/video_stream_opencv/: video_stream
install/lib/web_video_server/: web_video_server
install/share/rov_control_station/: package.xml
src/interpreter/: CMakeLists.txt
src/interpreter/src/: interpret.py
src/rov_control_station/: CMakeLists.txt
src/rov_control_station/launch/: control.launch
src/rov_teleop/: CMakeLists.txt  plugin.xml  setup.py
src/rov_teleop/resource/: MyPlugin.ui
src/rov_teleop/scripts/: rov_teleop.py
src/rov_teleop/src/rov_teleop/: my_module.py
(+10 files in other folders)
